Fixed CSS to align bottom of benefit with bottom of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ p {
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
+  padding-bottom: 80px;
 }
 
 .benefit-more {
